[package]
name = "nailgun"
version = "0.1.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
trust-dns-proto = "0.20.0"
argh = "0.1.4"
anyhow = "1.0"