[package]
name = "tokenbucket"
version = "0.1.0"
authors = ["Evan Cameron <cameron.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["time", "sync", "macros"] }
crossbeam-channel = "0.5.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }